Change Arrays.asList() to List.of()